--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "app1": "https://raw.githubusercontent.com/4tek-ekko/config_supper_app/main/app1/{platform}/v1",
-  "app2": "https://raw.githubusercontent.com/4tek-ekko/config_supper_app/main/app2/{platform}/v1",
-  "app3": "https://raw.githubusercontent.com/4tek-ekko/config_supper_app/main/app3/{platform}/v1",
-  "app4": "https://raw.githubusercontent.com/4tek-ekko/config_supper_app/main/app4/{platform}/v1"
+      "version": "0.0.1",
+    "appId": "app.id.ext",
+  "containerName": "app1",
+  "url": "https://github.com/mobile-ekko/config_supper_app/raw/main/app1/ios/v3/app1.zip"
 }
