--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
             "appName": "P2PD",
             "containerName": "p2pd",
             "module": "./App",
-            "url": "https://github.com/mobile-ekko/config_supper_app/raw/main/app3/ios/app3.zip",
+            "url": "https://raw.githubusercontent.com/mobile-ekko/config_supper_app/main/p2pd.zip",
             "version": "0.0.1",
             "loadType": "GIT",
             "type": "Container"
